apply plugin: 'java'
apply plugin: 'jacoco'

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
    compile 'com.google.code.gson:gson:2.8.6'
    compile 'com.squareup.okhttp3:okhttp:3.12.10'
    compile 'com.squareup.okhttp3:logging-interceptor:3.12.10'

    testCompile 'junit:junit:4.12'
    testCompile 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
    testCompile 'org.reflections:reflections:0.9.12'
}

jacoco {
    toolVersion = "0.8.5"
}

jacocoTestReport {
    reports {
        xml.enabled = true
        html.enabled = true
    }
}

task fatJar(type: Jar) {
    baseName = rootProject.name + '-full'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

apply from: rootProject.file('gradle/gradle-mvn-push.gradle')